@@ -36,6 +36,8 @@ Version 1.9.3
        instead of project monitor. (Stefan)
 - BUG: project properties in the project monitor were not
        updated properly. (Stefan)
+- BUG: Windows and dialogs were shown with a wrong size if
+       the monitor settings changed. (Stefan)
 
 Version 1.9.2
 - BUG: Performance issue if dragging lots of files
